# a2a

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  a2a.yaml  pyproject.toml  todo.md
.github/workflows/: ci.yml
a2a/: __init__.py  cli.py  runtime.py
a2a-transport/: go.mod
a2a-transport/benchmark/: bench_test.go
a2a-transport/cmd/a2a-transport/: main.go
a2a-transport/internal/bridge/: unixsocket.go
a2a-transport/internal/client/: client.go
a2a-transport/internal/codec/: flatbuffers.go
a2a-transport/internal/server/: server.go
a2a-transport/proto/a2a/v1/: a2a.proto
a2a/agent/: base.py  capabilities.py  manager.py  router.py
a2a/config/: defaults.py  loader.py  schema.py
a2a/monitoring/: __init__.py  metrics.py  rate_limiter.py
a2a/plugins/code_fixer/: config.yaml  plugin.py  prompts.py
a2a/plugins/log_reader/: config.yaml  plugin.py  prompts.py
a2a/projection/: adapter.py  auto_trainer.py  dataset.py  registry.py  trainer.py
a2a/protocol/: a2a.proto  errors.py  messages.py
a2a/security/: __init__.py  auth.py  tls.py
a2a/tensor/: dtype.py  extractor.py  injector.py  serializer.py
a2a/transport/: bridge_server.py  client.py  codec.py  discovery.py  server.py
a2a/utils/: async_utils.py  logging.py
docs/: architecture.md  config.md  deployment.md  dev-plan.md  index.md  plan.md  plugins.md  protocol.md
docs/api/: index.md
examples/basic_mesh/: a2a.yaml  start.sh
examples/basic_mesh/plugins/: inverter.py  repeater.py
examples/multi_model/: a2a.yaml  start.sh
examples/multi_model/plugins/: mixer.py  normalizer.py  summarizer.py
tests/: test_cli.py  test_package.py
tests/agent/: test_base.py  test_manager.py
tests/bridge/: test_bridge.py
tests/config/: test_loader.py  test_schema.py
tests/examples/: test_examples.py
tests/integration/: test_cross_model.py  test_plugin_flow.py  test_runtime.py  test_security.py  test_tensor_pipeline.py
tests/monitoring/: test_metrics.py  test_rate_limiter.py
tests/plugins/: test_code_fixer.py  test_log_reader.py
tests/projection/: test_adapter.py  test_auto_trainer.py  test_dataset.py  test_registry.py  test_trainer.py
tests/protocol/: test_errors.py  test_messages.py
tests/security/: test_auth.py
tests/tensor/: test_dtype.py  test_extractor.py  test_injector.py  test_serializer.py
tests/transport/: test_codec.py  test_grpc.py  test_interceptors.py
tests/utils/: test_logging.py
