[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-protocol"
version = "0.1.0.dev0"
description = "A2A Protocol — AI-to-AI Latent Space Communication Protocol"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "mBm TECHNOLOGY LLC", email = "info@mbm.technology"},
]
urls = {Homepage = "https://console.mbm.mn", Repository = "https://github.com/batmunkhcom/a2a"}
keywords = ["ai", "protocol", "latent-space", "tensor", "communication", "machine-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "flatbuffers>=23.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "grpcio-tools>=1.60",
]

ml = [
    "torch>=2.1",
    "transformers>=4.36",
    "safetensors>=0.4",
]

[project.scripts]
a2a = "a2a.cli:app"

[tool.setuptools.packages.find]
include = ["a2a*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "a2a/protocol/generated",
    "*.proto",
    "*_pb2.py",
    "*_pb2_grpc.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_package.py" = ["F401", "I001"]
"a2a/transport/server.py" = ["N802"]
"a2a/protocol/messages.py" = ["UP017"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["a2a/protocol/generated"]

[[tool.mypy.overrides]]
module = "a2a.tensor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a.protocol.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a.protocol.messages"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a.transport.server"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a.transport.client"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["a2a"]
omit = ["*/_pb2*.py", "tests/*"]
